examples/algebraic-effects.ssc
#!/usr/bin/env ssc
---
name: algebraic-effects
description: Typed algebraic effects showcase — Logger + State + NonDet, capability vs handler style (v1.12.3)
---

# Algebraic Effects — v1.12

Demonstrates the typed effect system introduced in v1.12: one-shot effects
(Logger, State), multi-shot effects (NonDet), and capability-style passing.

## Logger effect (one-shot, handler style)

```scalascript
effect Logger:
  def log(msg: String): Unit

def greet(name: String): Unit ! Logger =
  Logger.log(s"Hello, $name!")

// Discharge Logger — collect messages into a list. The handler appends each logged
// message to an accumulator and resumes. (The textbook *pure* deep-handler form
// `msg :: resume(())` would need a handler return clause to seed the base case as
// `Nil` — `return x => Nil` in Koka/Eff; ScalaScript's `handle` has no return clause,
// so `resume(())` yields the continuation's pure result `()`, and we accumulate
// explicitly instead.)
var messages: List[String] = List()
handle(greet("World")) {
  case Logger.log(msg, resume) =>
    messages = messages :+ msg
    resume(())
}
println(messages)  // List(Hello, World!)
```

## State effect

```scalascript
// `State[S]` is a stdlib parameterized effect; use it directly with the `runState`
// runner. (Methods are `get` / `set` / `modify`.)
def counter(): Int ! State[Int] =
  val n = State.get()
  State.set(n + 1)
  n

// runState discharges State — returns (finalState, result)
val (finalState, value) = runState(0) { counter() }
println(value)       // 0
println(finalState)  // 1
```

## Logger + State interleaved

```scalascript
def tracedIncrement(): Int ! (Logger, State[Int]) =
  Logger.log("before increment")
  val n = State.get()
  State.set(n + 1)
  Logger.log("after increment")
  n

// Discharge both effects: runLogger wraps runState
val (s, result) = runState(10) {
  runLogger { tracedIncrement() }
}
println(result)  // 10
println(s)       // 11
```

## NonDet multi-shot exemplar

```scalascript
multi effect NonDet:
  def choose(options: List[Int]): Int

def program(): Int ! NonDet =
  val x = NonDet.choose(List(1, 2, 3))
  val y = NonDet.choose(List(10, 20))
  x + y

// Handler explores all branches by calling resume for each option
val all = handle(program()) {
  case NonDet.choose(opts, resume) =>
    opts.flatMap(opt => resume(opt))
}
println(all)  // List(11, 21, 12, 22, 13, 23)
```

## Capability style (no effect row)

```scalascript
// withLogger injects a logger sink as a capability — no effect row, no resume.
// Uses ?=> (context function) rather than the ! row system.
def withLogger[A](sink: String => Unit)(body: () => A): A =
  body()

val result2 = withLogger(println) { () =>
  "done"
}
println(result2)  // done
```

## Stdlib runners (typed discharge signatures)

The stdlib provides pre-built runners for each standard effect.
These discharge the named effect and return the body's result:

```scalascript
// runLogger      { body: A ! Logger }                  => A
// runRandomSeeded(seed: Long) { body: A ! Random }     => A
// runClockAt(t0: Long) { body: A ! Clock }             => A
// runEnvWith(m: Map[String,String]) { body: A ! Env }  => A
// runState(s0: S) { body: A ! State[S] }               => (S, A)
// runHttp { body: A ! Http }                           => A

val msgs = runLoggerToList {
  Logger.info("step 1")
  Logger.info("step 2")
  42
}
println(msgs)
```

## Stream effect — typed producer (v1.51.6)

`Stream[A]` is a parameterized algebraic effect. `runStream { body }` discharges
it and returns `(Source[A], R)` — the collected source and the body's final value.

```scalascript
// Producer — emits via effect, returns a meaningful value
def readNumbers(shouldStop: Boolean): Int ! Stream[Int] =
  Stream.emit(1)
  Stream.emit(2)
  if shouldStop then Stream.complete()
  Stream.emit(3)
  3  // count of emitted lines (full path)

val (nums, count) = runStream { readNumbers(false) }
nums.runToList()  // List(1, 2, 3)
count             // 3

val (partial, _) = runStream { readNumbers(true) }
partial.runToList()  // List(1, 2)  — complete() stopped before emit(3)

// Mixed-type emits are a compile error:
// runStream { Stream.emit(1); Stream.emit("x") }
//   // error: Stream[Int] vs Stream[String] in effect row
```
